whole project added

--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 309px;
+  width: 309px;
   padding: 25px;
   font-weight: 500;
   font-size: 20px;
