--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,10 @@
   }
   &-work {
   }
+  &-reviews {
+  }
+  &-request {
+  }
 }
 .main {
   width: 100%;
@@ -52,13 +56,6 @@
   }
 
   &__title {
-    font-size: 40px;
-    line-height: 50px;
-
-    text-transform: uppercase;
-    &:not(:last-child) {
-      margin-bottom: 40px;
-    }
   }
 
   &__content {
@@ -121,13 +118,6 @@
   }
 
   &__title {
-    font-size: 40px;
-    line-height: 50px;
-
-    text-transform: uppercase;
-    &:not(:last-child) {
-      margin-bottom: 40px;
-    }
   }
 
   &__content {
@@ -220,12 +210,6 @@
 
   &__title {
     text-align: center;
-    font-size: 40px;
-    line-height: 50px;
-    text-transform: uppercase;
-    &:not(:last-child) {
-      margin-bottom: 40px;
-    }
   }
 
   &__list {
@@ -260,12 +244,6 @@
   }
 
   &__title {
-    font-size: 40px;
-    line-height: 50px;
-    text-transform: uppercase;
-    &:not(:last-child) {
-      margin-bottom: 40px;
-    }
   }
 
   &__list {
@@ -297,5 +275,153 @@
   }
 
   &__text {
+  }
+}
+//==========================================================================================================================================
+
+.reviews {
+  background-color: $bg;
+  padding: 65px 0;
+  &__container {
+    max-width: 1036px;
+  }
+
+  &__title {
+    text-align: center;
+  }
+
+  &__slider {
+    position: relative;
+  }
+
+  &__wrapper {
+  }
+
+  &__slide {
+  }
+}
+
+.slide {
+  &__wrap {
+    padding: 0 100px;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 20px;
+  }
+
+  &__body {
+    display: grid;
+    gap: 20px;
+  }
+
+  &__text {
+  }
+
+  &__name {
+    text-transform: uppercase;
+  }
+
+  &__img {
+    display: grid;
+    gap: 24px;
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+}
+.swiper-button {
+  &-prev {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 36px;
+    transform: translate(-50%, -50%);
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+    background-color: $slideButton;
+    &::before {
+      content: '';
+      width: 32px;
+      height: 32px;
+      background: url('@img/general/slide.svg') center / contain no-repeat;
+    }
+  }
+  &-next {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    right: -36px;
+    transform: translate(-50%, -50%);
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+    background-color: $slideButton;
+
+    &::before {
+      content: '';
+      width: 32px;
+      height: 32px;
+      background: url('@img/general/slide.svg') center / contain no-repeat;
+      transform: rotate(-180deg);
+    }
+  }
+}
+//==========================================================================================================================================
+
+.request {
+  background-color: $border;
+  &__container {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  &__content {
+    padding: 50px 0 0 0;
+    color: $mainColor2;
+  }
+
+  &__title {
+  }
+
+  &__text {
+    opacity: 0.6;
+    &:not(:last-child) {
+      margin-bottom: 44px;
+    }
+  }
+
+  &__map {
+  }
+}
+//==========================================================================================================================================
+
+.form {
+  display: grid;
+  gap: 31px;
+  &__item {
+    width: 100%;
+  }
+
+  &__input {
+    color: $formText;
+    background-color: $border;
+    border-bottom: solid 1px $mainColor2;
+    width: 100%;
+    padding: 15px 0;
+    &::placeholder {
+      color: $formText;
+    }
+  }
+
+  &__buttons {
   }
 }
