--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -132,7 +132,7 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 309px;
+  width: 309px;
   padding: 25px;
   font-weight: 500;
   font-size: 20px;
@@ -167,20 +167,57 @@ h6 {
      object-fit: contain;
 }
 
-.titlebig {
-  font-size: 3.125rem;
-  font-weight: 400;
-  line-height: 1.24;
-}
-
 .title {
-  font-size: 2.5rem;
-  font-weight: 400;
-  line-height: 1.25;
+  font-size: 40px;
+  line-height: 50px;
+  text-transform: uppercase;
 }
 
-.text {
-  font-weight: 400;
+.title:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.scroll {
+  position: fixed;
+  z-index: 10;
+  bottom: -250px;
+  left: 5px;
+  background: url("../img/general/scroll.svg") center/cover no-repeat;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  -o-transition: transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
+}
+
+@supports (height: clamp( 1.875rem , 1.5416666667rem  +  1.6666666667vw , 2.8125rem )) {
+  .scroll {
+    height: clamp( 1.875rem , 1.5416666667rem  +  1.6666666667vw , 2.8125rem );
+  }
+}
+
+@supports not (height: clamp( 1.875rem , 1.5416666667rem  +  1.6666666667vw , 2.8125rem )) {
+  .scroll {
+    height: calc(1.875rem + 0.9375 * (100vw - 20rem) / 56.25);
+  }
+}
+
+@supports (width: clamp( 1.875rem , 1.5416666667rem  +  1.6666666667vw , 2.8125rem )) {
+  .scroll {
+    width: clamp( 1.875rem , 1.5416666667rem  +  1.6666666667vw , 2.8125rem );
+  }
+}
+
+@supports not (width: clamp( 1.875rem , 1.5416666667rem  +  1.6666666667vw , 2.8125rem )) {
+  .scroll {
+    width: calc(1.875rem + 0.9375 * (100vw - 20rem) / 56.25);
+  }
+}
+
+.scroll:hover {
+  -webkit-transform: translateY(10px);
+      -ms-transform: translateY(10px);
+          transform: translateY(10px);
 }
 
 .header {
@@ -256,6 +293,27 @@ h6 {
   display: none;
 }
 
+.footer {
+  background-color: #efe6e4;
+}
+
+.footer__container {
+  padding: 37px 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 42px;
+}
+
 .page {
   background-color: #efe6e4;
 }
@@ -308,16 +366,6 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.about__title {
-  font-size: 40px;
-  line-height: 50px;
-  text-transform: uppercase;
-}
-
-.about__title:not(:last-child) {
-  margin-bottom: 40px;
 }
 
 .about__content {
@@ -384,16 +432,6 @@ h6 {
 
 .portfolio {
   padding: 65px 0;
-}
-
-.portfolio__title {
-  font-size: 40px;
-  line-height: 50px;
-  text-transform: uppercase;
-}
-
-.portfolio__title:not(:last-child) {
-  margin-bottom: 40px;
 }
 
 .portfolio__content {
@@ -489,13 +527,6 @@ h6 {
 
 .team__title {
   text-align: center;
-  font-size: 40px;
-  line-height: 50px;
-  text-transform: uppercase;
-}
-
-.team__title:not(:last-child) {
-  margin-bottom: 40px;
 }
 
 .team__list {
@@ -530,16 +561,6 @@ h6 {
 
 .work__container {
   text-align: center;
-}
-
-.work__title {
-  font-size: 40px;
-  line-height: 50px;
-  text-transform: uppercase;
-}
-
-.work__title:not(:last-child) {
-  margin-bottom: 40px;
 }
 
 .work__list {
@@ -579,6 +600,223 @@ h6 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.reviews {
+  background-color: #efe6e4;
+  padding: 65px 0;
+}
+
+.reviews__container {
+  max-width: 1036px;
+}
+
+.reviews__title {
+  text-align: center;
+}
+
+.reviews__slider {
+  position: relative;
+}
+
+.slide__wrap {
+  padding: 0 100px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+}
+
+.slide__body {
+  display: -ms-grid;
+  display: grid;
+  gap: 20px;
+}
+
+.slide__name {
+  text-transform: uppercase;
+}
+
+.slide__img {
+  display: -ms-grid;
+  display: grid;
+  gap: 24px;
+}
+
+.slide__img img {
+  max-width: 100%;
+  height: auto;
+}
+
+.swiper-button-prev {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 36px;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  background-color: #cc8b86;
+}
+
+.swiper-button-prev::before {
+  content: "";
+  width: 32px;
+  height: 32px;
+  background: url("../img/general/slide.svg") center/contain no-repeat;
+}
+
+.swiper-button-next {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  top: 50%;
+  right: -36px;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  background-color: #cc8b86;
+}
+
+.swiper-button-next::before {
+  content: "";
+  width: 32px;
+  height: 32px;
+  background: url("../img/general/slide.svg") center/contain no-repeat;
+  -webkit-transform: rotate(-180deg);
+      -ms-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+}
+
+.request {
+  background-color: #8d7370;
+}
+
+.request__container {
+  display: -ms-grid;
+  display: grid;
+  gap: 20px;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+}
+
+.request__content {
+  padding: 50px 0 0 0;
+  color: #ffffff;
+}
+
+.request__text {
+  opacity: 0.6;
+}
+
+.request__text:not(:last-child) {
+  margin-bottom: 44px;
+}
+
+.form {
+  display: -ms-grid;
+  display: grid;
+  gap: 31px;
+}
+
+.form__item {
+  width: 100%;
+}
+
+.form__input {
+  color: #f6ede9;
+  background-color: #8d7370;
+  border-bottom: solid 1px #ffffff;
+  width: 100%;
+  padding: 15px 0;
+}
+
+.form__input::-webkit-input-placeholder {
+  color: #f6ede9;
+}
+
+.form__input::-moz-placeholder {
+  color: #f6ede9;
+}
+
+.form__input:-ms-input-placeholder {
+  color: #f6ede9;
+}
+
+.form__input::-ms-input-placeholder {
+  color: #f6ede9;
+}
+
+.form__input::placeholder {
+  color: #f6ede9;
+}
+
+.swiper {
+  overflow: hidden;
+}
+
+.swiper-wrapper {
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.swiper-vertical .swiper-wrapper {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.swiper-autoheight .swiper-wrapper {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.swiper-initialized .swiper-slide {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.swiper-android .swiper-slide,
+.swiper-android .swiper-wrapper {
+  -webkit-transform: translate3d(0px, 0, 0);
+          transform: translate3d(0px, 0, 0);
+}
+
+.swiper-button-lock {
+  display: none !important;
 }
 
 @media (min-width: 47.99875em) {
