--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,14 +1,26 @@
 // Заголовки, общие БЄМ блоки и проче...
-.titlebig {
-  font-size: rem(50);
-  font-weight: 400;
-  line-height: math.div(62, 50);
-}
+
 .title {
-  font-size: rem(40);
-  font-weight: 400;
-  line-height: math.div(50, 40);
+  font-size: 40px;
+  line-height: 50px;
+  text-transform: uppercase;
+  &:not(:last-child) {
+    margin-bottom: 40px;
+  }
 }
-.text {
-  font-weight: 400;
+
+.scroll {
+  position: fixed;
+  z-index: 10;
+  bottom: -250px;
+  left: 5px;
+
+  @include adaptiveValue('height', 45, 30);
+  @include adaptiveValue('width', 45, 30);
+  background: url('@img/general/scroll.svg') center / cover no-repeat;
+  transition: transform 1s;
+
+  &:hover {
+    transform: translateY(10px);
+  }
 }
