--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,3 +1,23 @@
 //====================================================================================================
+.footer {
+  background-color: $bg;
+  &__container {
+    padding: 37px 100px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__inner {
+    display: flex;
+    gap: 42px;
+  }
+  &__button {
+  }
+
+  &__addres {
+  }
+
+  &__text {
+  }
+}
 
 //====================================================================================================
